# aiekp

./: .gitignore  README.md  pyproject.toml  scratch_test_extractor.py  scratch_test_graph.py  scratch_test_parser.py  start_servers.bat  test_neo4j.py
.github/workflows/: ci.yml  release.yml
apps/api/: .env.example  auth.db  pyproject.toml  scan_status.json  telemetry.db  test_api.py  test_ingest.py  test_neo4j.py
apps/api/prisma/: schema.prisma
apps/api/src/: __init__.py  config.py  dependencies.py  main.py  schemas.py
apps/api/src/auth/: crud.py  database.py  models.py  utils.py
apps/api/src/graphql/: __init__.py  resolvers.py  schema.py
apps/api/src/graphql_api/: resolvers.py  schema.py  types.py
apps/api/src/routers/: auth.py  context.py  docs.py  feedback.py  graph.py  health.py  ingest.py  reason.py  rules.py  scanner.py  search.py  stats.py
apps/api/src/telemetry/: __init__.py  database.py  models.py  tracer.py
apps/api/tests/: test_api.py  test_context.py  test_reason.py  test_rules.py
apps/cli/: README.md  finetune_data.jsonl  pyproject.toml
apps/cli/src/aiekp_cli/: __init__.py  config_manager.py  main.py
apps/cli/src/aiekp_cli/commands/: eval.py
apps/dashboard/: lint_report.json  lint_report_utf8.json  lint_results.txt  package-lock.json  package.json
apps/dashboard/src/app/: layout.tsx  page.tsx
apps/dashboard/src/app/chat/: page.tsx
apps/dashboard/src/app/docs/: page.tsx
apps/dashboard/src/app/login/: page.tsx
apps/dashboard/src/app/repositories/: page.tsx
apps/dashboard/src/app/rules/: page.tsx
apps/dashboard/src/components/auth/: AuthGuard.tsx
apps/dashboard/src/components/chat/: ChatBox.tsx  EvidencePanel.tsx
apps/dashboard/src/components/dashboard/: DashboardOverlay.tsx  StatsCard.tsx
apps/dashboard/src/components/docs/: DocGenerator.tsx
apps/dashboard/src/components/graph/: GraphCanvas.tsx  KnowledgeGraph.tsx  NodeDetailPanel.tsx  SearchBar.tsx
apps/dashboard/src/components/graph/nodes/: CustomNodes.tsx
apps/dashboard/src/components/layout/: AppShell.tsx  Sidebar.tsx
apps/dashboard/src/components/repositories/: RepositoryProgress.tsx
apps/dashboard/src/components/rules/: RuleList.tsx  ViolationTable.tsx
apps/dashboard/src/lib/: api-types.ts  elk-layout.ts  graph-utils.ts  node-colors.ts
apps/dashboard/src/store/: authSlice.ts  graphSlice.ts  index.ts
apps/dashboard/src/store/api/: aiekpApi.ts
apps/vscode-extension/: README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
apps/vscode-extension/media/: chat.css  chat.js
apps/vscode-extension/src/: ChatPanel.ts  ContextManager.ts  apiClient.ts  extension.ts
docs/: project-context.md
docs/adr/: 0001-isolate-reasoning-engine.md  0002-parser-plugin-architecture.md  0002-use-neo4j-for-knowledge-graph.md  0004-use-langgraph-for-reasoning.md  README.md  template.md
docs/architecture/: engines-overview.md  release-process.md
docs/conductor/: index.md  product.md  roadmap.md  tech-stack.md  tracks.md  workflow.md
docs/conductor/tracks/phase-0-foundation/: spec.md
docs/conductor/tracks/phase-1-scanner/: spec.md
docs/conductor/tracks/phase-10-extension/: index.md  metadata.json  plan.md  spec.md
docs/conductor/tracks/phase-10.5-release/: index.md  metadata.json  plan.md  spec.md
docs/conductor/tracks/phase-11-multi-agent-swarm/: plan.md  spec.md
docs/conductor/tracks/phase-12-public-release/: plan.md  spec.md
docs/conductor/tracks/phase-13-web-dashboard/: plan.md  spec.md
docs/conductor/tracks/phase-14-enterprise-intelligence/: plan-stage-1.md  plan-stage-2.md  plan-stage-3.md  plan-stage-4.md  spec.md
docs/conductor/tracks/phase-15-evaluation/: spec.md
docs/conductor/tracks/phase-16-security/: plan.md  spec.md
docs/conductor/tracks/phase-17-release/: spec.md
docs/conductor/tracks/phase-2-parser/: spec.md
docs/conductor/tracks/phase-3-extractor/: spec.md
docs/conductor/tracks/phase-4-graph/: spec.md
docs/conductor/tracks/phase-5-api/: spec.md
docs/conductor/tracks/phase-6-context-engine/: index.md  metadata.json  plan.md  spec.md
docs/conductor/tracks/phase-7-reasoning-engine/: index.md  metadata.json  plan.md  spec.md
docs/conductor/tracks/phase-8-cli/: index.md  metadata.json  plan.md  spec.md
docs/conductor/tracks/phase-9-api/: index.md  metadata.json  plan.md  spec.md
docs/domain/: core-concepts.md  knowledge-model.md
dummy_repo/: secret.py
infrastructure/: docker-compose.yml
plugins/python_extractor/: pyproject.toml
plugins/python_extractor/src/python_extractor/: __init__.py  extractor.py
plugins/python_extractor/tests/: test_extractor.py
plugins/python_parser/: pyproject.toml
plugins/python_parser/src/python_parser/: __init__.py  parser.py
plugins/python_parser/tests/: test_parser.py
plugins/typescript_extractor/: pyproject.toml
plugins/typescript_extractor/src/typescript_extractor/: __init__.py  extractor.py
plugins/typescript_parser/: pyproject.toml
plugins/typescript_parser/src/typescript_parser/: __init__.py  parser.py
sample-ts-app/: index.ts
scratch/: test_ts.py
scripts/: migrate_tenant_id.py  release.sh  test_multi_tenancy.py
