[project]
name = "aiekp"
version = "0.1.0"
description = "AI Engineering Knowledge Platform"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "apps/*",
    "packages/*",
    "plugins/python_parser",
    "plugins/python_extractor",
    "plugins/typescript_parser",
    "plugins/typescript_extractor",
]
exclude = [
    "apps/vscode-extension",
    "apps/dashboard"
]
