[project]
name = "aiekp-api"
version = "0.1.0"
description = "AIEKP Main API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.30.0",
    "neo4j>=5.14.0",
    "qdrant-client>=1.6.0",
    "redis>=5.0.0",
    "minio>=7.2.0",
    "prisma>=0.13.1",
    "aiekp-shared",
    "aiekp-knowledge-engine",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
aiekp-shared = { workspace = true }
aiekp-knowledge-engine = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src"]
