[project]
name = "aiekp-api"
version = "0.1.0"
description = "AIEKP Main API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.30.0",
    "neo4j>=5.14.0",
    "qdrant-client>=1.6.0",
    "redis>=5.0.0",
    "minio>=7.2.0",
    "prisma>=0.13.1",
    "python-dotenv>=1.2.2",
    "pydantic-settings>=2.0.0",
    "aiekp-shared",
    "aiekp-knowledge-engine",
    "parser-core",
    "python-parser",
    "metadata-extractor",
    "python-extractor",
    "knowledge-graph",
    "context-engine",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
aiekp-shared = { workspace = true }
aiekp-knowledge-engine = { workspace = true }
parser-core = { workspace = true }
python-parser = { workspace = true }
metadata-extractor = { workspace = true }
python-extractor = { workspace = true }
knowledge-graph = { workspace = true }
context-engine = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
