[project]
name = "aiekp-cli"
version = "0.1.0"
description = "Command Line Interface for AIEKP"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
aiekp = "aiekp_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
