[project]
name = "aiekp-cli"
version = "0.1.2"
description = "Command Line Interface for AIEKP (AI Engineering Knowledge Platform)"
readme = "README.md"
authors = [
    { name = "AIEKP Team", email = "hello@aiekp.dev" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
aiekp = "aiekp_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
