[project]
name = "typescript-parser"
version = "0.1.0"
description = "Typescript/Javascript Parser Plugin for AIEKP"
readme = "README.md"
authors = [
    { name = "AIEKP Team" }
]
requires-python = ">=3.11"
dependencies = [
    "parser-core",
    "tree-sitter>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
parser-core = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
